# facefolio

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  logging_config.py  main.py  middleware.py
app/api/: events.py  invitations.py  photos.py  router.py
app/auth/: guards.py  supabase.py
app/db/: session.py
app/db/queries/: events.py  invitations.py  photos.py  users.py
app/models/: __init__.py  base.py  event.py  face.py  face_enrollment.py  invitation.py  photo.py  photo_tag.py  user.py
app/schemas/: events.py  invitations.py  photos.py
app/storage/: client.py  keys.py
app/worker/: celery_app.py  scheduler.py  tasks.py
docs/: FLOWS.md  LOGGING.md  alembic_migrations_reference.md  auth.md  schema_facefolio.sql
migrations/: env.py
migrations/versions/: 82dabc4137c8_initial_schema.py
