[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.13.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
